# call_me_maybe

./: .env  Makefile  README.md  pyproject.toml  tokenizer_example.py
data/input/: functions_definition.json  test_1.json
data/output/: output.json
llm_sdk/: __init__.py
src/: __main__.py  cli_parsing.py  json_parsing.py  json_part.py  main.py  promts.py
src/arguments_generators_pack/: __init__.py  generate_bool_arguments.py  generate_num_arguments.py  generate_str_arguments.py  utils.py
