[project]
name = "callmemaybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "autopep8==2.3.2",
    "bitarray==3.8.0",
    "blinker==1.9.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "ckzg==2.1.5",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "cytoolz==1.1.0",
    "dnspython==2.8.0",
    "eth-abi==6.0.0b1",
    "eth-account==0.13.7",
    "eth-hash==0.7.1",
    "eth-keyfile==0.8.1",
    "eth-keys==0.7.0",
    "eth-rlp==2.2.0",
    "eth-typing==5.2.1",
    "eth-utils==5.3.1",
    "flask==3.1.3",
    "frozenlist==1.8.0",
    "h11==0.16.0",
    "hexbytes==1.3.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "impacket==0.13.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "ldap3==2.9.1",
    "ldapdomaindump==0.10.0",
    "markdown==3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "multidict==6.7.0",
    "nest-asyncio==1.6.0",
    "parsimonious==0.10.0",
    "pefile==2024.8.26",
    "propcache==0.4.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycodestyle==2.14.0",
    "pycparser==3.0",
    "pycryptodome==3.23.0",
    "pycryptodomex==3.23.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pymongo==4.16.0",
    "pyopenssl==26.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyunormalize==17.0.0",
    "regex==2026.1.15",
    "requests==2.32.5",
    "rich==14.3.3",
    "rlp==4.1.0",
    "setuptools==82.0.1",
    "six==1.17.0",
    "smbclientng==3.0.0",
    "toolz==1.1.0",
    "types-requests==2.32.4.20260107",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "web3==7.14.0",
    "websockets==15.0.1",
    "werkzeug==3.1.6",
    "yarl==1.22.0",
]
