[project]
name = "call_me_maybe"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "pydantic>=2.13.4",
    "pygments>=2.20.0",
    "pytest>=9.1.1",
    "transformers",
]

[project.optional-dependencies]
dev = ["flake8", "mypy", "ruff", "ty", "pytest"]

[project.scripts]
call_me_maybe = "src.cli:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "llm_sdk*"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP046", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
mypy_path = "llm_sdk"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]